# leisure-software-renderer

./: .gitignore  README.md  coordinate-system-convention.txt
cpp-folders/: .gitignore  CMakeLists.txt
cpp-folders/scripts/: run_phase7_parity_capture.sh
cpp-folders/src/exp-plumbing/: CMakeLists.txt  hello_culling_sw.cpp  hello_culling_vk.cpp  hello_forward_plus_stress_vulkan.cpp  hello_jolt_integration.cpp  hello_light_types_culling_sw.cpp  hello_light_types_culling_vk.cpp  hello_mesh_shader.cpp  hello_modern_vulkan.cpp  hello_occlusion_culling_sw.cpp  hello_occlusion_culling_vk.cpp  hello_pass_basics.cpp  hello_pass_basics_vulkan.cpp  hello_pass_plumbing.cpp  hello_ray_query.cpp  hello_rendering_paths.cpp  hello_soft_shadow_culling_sw.cpp  hello_soft_shadow_culling_vk.cpp  hello_software_triangle.cpp  hello_vulkan_triangle.cpp
cpp-folders/src/exp-plumbing/shaders/: culling_vk.frag  culling_vk.vert  light_types_culling_vk.frag  light_types_culling_vk.vert  mesh_triangle.frag  mesh_triangle.mesh  modern_instanced.frag  modern_instanced.vert  pass_basics_gpu.vert  ray_query.frag  ray_query.vert  soft_shadow_culling_vk.frag  soft_shadow_culling_vk.vert  vulkan_triangle.frag  vulkan_triangle.vert
cpp-folders/src/exp-rendering-techniques/: CMakeLists.txt  demo_forward_classic_renderpath.cpp
cpp-folders/src/exp-rendering-techniques/shaders/: forward_classic.frag
cpp-folders/src/hello-3d-primitives/: CMakeLists.txt  hello_3d_object.cpp  hello_entt.cpp  hello_flat_shading.cpp  hello_flat_shading_xsimd.cpp  hello_obj_format.cpp  hello_pipeline_blinn_phong_shading.cpp  hello_pipeline_flat_shading.cpp  hello_pipeline_gooch_shading.cpp  hello_pipeline_gouraud_shading.cpp  hello_pipeline_normal_zbuffer_debug.cpp  hello_pipeline_oren_nayar_shading.cpp  hello_pipeline_phong_shading.cpp  hello_pipeline_texture_mapping.cpp  hello_pipeline_toon_shading.cpp  hello_wireframe.cpp
cpp-folders/src/hello-other-exps/: CMakeLists.txt
cpp-folders/src/hello-parallelization/: CMakeLists.txt  hello_fiber_job_system.cpp  hello_fiber_job_system_boost.cpp  hello_fiber_job_system_graph.cpp  hello_fiber_job_system_lockless.cpp  hello_fiber_job_system_lockless_priority.cpp  hello_fiber_job_system_single_worker.cpp  hello_job_system_graph.cpp  hello_nested_loops.cpp  hello_thread_job_system.cpp  hello_thread_job_system_lockless.cpp  hello_thread_job_system_lockless_priority.cpp  hello_thread_jobs.cpp  hello_thread_shader_job.cpp  hello_thread_shader_job_zoned.cpp  hello_thread_shader_raw.cpp  hello_thread_shader_raw_zoned.cpp  hello_thread_zoned.cpp  hello_xsimd_threads.cpp  pal_tasks_demo.cpp  primitive_coroutine_pool.cpp  primitive_coroutines.cpp  primitive_fibers.cpp  primitive_loops.cpp  primitive_nested_fibers.cpp  primitive_threads.cpp
cpp-folders/src/hello-physics/: CMakeLists.txt  hello_physics.cpp
cpp-folders/src/hello-pixel/: CMakeLists.txt  hello_line.cpp  hello_pixel.cpp  hello_random_colors.cpp  hello_rectangles.cpp  hello_sdl_pixel.cpp
cpp-folders/src/hello-pixel-primitives/: CMakeLists.txt  hello_2d_transformation.cpp  hello_3d_object.cpp  hello_circle_poly.cpp  hello_line.cpp  hello_pixel.cpp  hello_rectangle.cpp  hello_sdl_pixel.cpp  hello_texture.cpp  hello_triangle.cpp  hello_watch.cpp  hello_wireframe.cpp  shs_renderer.hpp
cpp-folders/src/hello-plumbing/: CMakeLists.txt  hello_forward_plus_stress_vulkan.cpp  hello_pass_basics.cpp  hello_pass_basics_vulkan.cpp  hello_pass_plumbing.cpp  hello_software_triangle.cpp  hello_vulkan_triangle.cpp
cpp-folders/src/hello-plumbing/shaders/: pass_basics_gpu.frag  vulkan_triangle.vert
cpp-folders/src/hello-render-target/: CMakeLists.txt  hello_camera_and_perobject_motion_blur.cpp  hello_depth_of_field.cpp  hello_glowing_star.cpp  hello_ibl_skybox.cpp  hello_ibl_skybox_optimized.cpp  hello_ibl_skybox_xsimd.cpp  hello_multi_pass.cpp  hello_pbr.cpp  hello_pbr_light_shafts.cpp  hello_per_object_motion_blur.cpp  hello_ping_pong.cpp  hello_shadow_mapping.cpp  hello_shadow_mapping_soft.cpp  hello_water.cpp
cpp-folders/src/hello-render-target/images/skybox/water_scene/: credit.txt
cpp-folders/src/hello-shaders/: CMakeLists.txt  hello_color_gradient.cpp  hello_color_hsb.cpp  hello_color_hsb_polar.cpp  hello_color_mix.cpp  hello_fbm.cpp  hello_fragment_shader.cpp  hello_green_noise.cpp  hello_mongolian_flag.cpp  hello_worm_hole.cpp
cpp-folders/src/hello-shs-renderer/: CMakeLists.txt  shs_renderer.hpp
cpp-folders/src/other-exps/: CMakeLists.txt  hello_engine_synth.cpp
cpp-folders/src/shs-renderer/: CMakeLists.txt  shs_renderer.hpp
cpp-folders/src/shs-renderer-lib/: CMakeLists.txt  task.txt
cpp-folders/src/shs-renderer-lib/docs/: vulkan-modernization-roadmap.md
cpp-folders/src/shs-renderer-lib/docs/migration/: PHASE7_PARITY_GATES.md  PORT_PLAN_AND_COVERAGE.md  task.txt
cpp-folders/src/shs-renderer-lib/include/shs/app/: camera_sync.hpp  runtime_state.hpp
cpp-folders/src/shs-renderer-lib/include/shs/camera/: camera_math.hpp  camera_rig.hpp  convention.hpp  follow_camera.hpp  free_camera.hpp  light_camera.hpp  view_camera.hpp
cpp-folders/src/shs-renderer-lib/include/shs/core/: context.hpp  log.hpp  result.hpp  time.hpp  units.hpp
cpp-folders/src/shs-renderer-lib/include/shs/frame/: frame_params.hpp  technique_mode.hpp
cpp-folders/src/shs-renderer-lib/shaders/vulkan/: default_scene.frag  default_scene.vert  default_sky.frag  default_sky.vert  fp_stress_deferred.frag  fp_stress_deferred.vert  fp_stress_depth_reduce.comp  fp_stress_dof.frag  fp_stress_gbuffer.frag  fp_stress_light_cull.comp  fp_stress_motion_blur.frag  fp_stress_scene.frag  fp_stress_scene.vert  fp_stress_shadow.vert  fp_stress_ssao.frag  pb_bright.frag  pb_composite.frag  pb_flare.frag  pb_fxaa.frag  pb_post.vert  pb_scene.frag  pb_scene.vert  pb_shadow.vert  pb_shafts.frag  pb_sky.frag  shape_cell_cull.comp  shape_volume_cull.comp
cpp-folders/src/shs-renderer-lib/src/: shs_renderer_lib.cpp  shs_vma.cpp
cpp-folders/src/shs-renderer-lib/tests/: vop_core_tests.cpp
cpp-folders/src/shs-renderer-lib/tools/: check_vop_boundaries.sh
docs/: units-convention.md  (+14 more)
(+209 files in other folders)
